--- a/assets/css/styleporto.css
+++ b/assets/css/styleporto.css
@@ -19,14 +19,6 @@
   /**
    * colors
    */
-<<<<<<< HEAD
-<<<<<<< HEAD
-   
-=======
->>>>>>> 977b8c4 (message 1)
-=======
-   
->>>>>>> 348059e (commit)
 
   --raw-seinna: hsl(24, 74%, 58%);
   --sizzling-sunrise: hsl(51, 95%, 54%);
@@ -122,13 +114,7 @@ body.light_theme {
   box-sizing: border-box;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-li { list-style: none; }
->>>>>>> 977b8c4 (message 1)
-=======
->>>>>>> 52113a2 (message 1)
+/* li { list-style: none; } */
 
 a { text-decoration: none; }
 
@@ -1383,8 +1369,4 @@ textarea.input-field {
 
   .about-banner { max-width: 450px; }
 
-<<<<<<< HEAD
 }
-=======
-}
->>>>>>> 977b8c4 (message 1)
